tests/testcases/errors/BCE0092-1.boo
"""
BCE0092-1.boo(5,7): BCE0092: 'int' is not a valid argument type for raise, only strings and exceptions are allowed.
BCE0092-1.boo(6,7): BCE0092: 'bool' is not a valid argument type for raise, only strings and exceptions are allowed.
"""
raise 1
raise false
